--- a/MeetingCalendar/Main.storyboard
+++ b/MeetingCalendar/Main.storyboard
@@ -28,7 +28,7 @@
                                 <rect key="frame" x="19" y="162" width="370" height="9"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1ZU-XV-hOe" userLabel="Calendar">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1ZU-XV-hOe" userLabel="Calendar">
                                 <rect key="frame" x="353" y="45" width="38" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="calendar"/>
@@ -49,6 +49,9 @@
                                 <rect key="frame" x="248" y="121" width="14" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="page2_right2"/>
+                                <connections>
+                                    <action selector="toNextMonth:" destination="iZ5-qM-0hh" eventType="touchUpInside" id="HUh-4N-aav"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wOM-lh-LXS" userLabel="PrevMonth">
                                 <rect key="frame" x="137" y="121" width="14" height="20"/>
@@ -56,9 +59,12 @@
                                 <state key="normal" image="page2_left-1">
                                     <attributedString key="attributedTitle"/>
                                 </state>
+                                <connections>
+                                    <action selector="toPreviousMonth:" destination="iZ5-qM-0hh" eventType="touchUpInside" id="2qe-kI-p33"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JWd-4o-JfW">
-                                <rect key="frame" x="16" y="175" width="374" height="630"/>
+                                <rect key="frame" x="16" y="176" width="374" height="599"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -121,7 +127,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ly9-pO-nTz" userLabel="sticker">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ly9-pO-nTz" userLabel="characterSticker">
                                                     <rect key="frame" x="279" y="18" width="75" height="75"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="75" id="IaG-7G-3ZW"/>
@@ -135,6 +141,10 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hSD-SD-K94" userLabel="hatSticker">
+                                                    <rect key="frame" x="302" y="27" width="29" height="26"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" red="0.73479140228426398" green="0.73479140228426398" blue="0.73479140228426398" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
@@ -189,12 +199,17 @@
                                     <outlet property="delegate" destination="iZ5-qM-0hh" id="4ug-9X-taP"/>
                                 </connections>
                             </tableView>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="page2_tab" translatesAutoresizingMaskIntoConstraints="NO" id="IK6-Qf-RbZ">
+                                <rect key="frame" x="-189" y="780" width="793" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Z3Q-uM-UNv"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="List" id="VLg-dd-RSR"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab_icon2" id="VLg-dd-RSR"/>
                     <navigationItem key="navigationItem" id="ClM-si-n6P"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="JWd-4o-JfW" id="PHc-NV-Exs"/>
                         <segue destination="W4t-XU-YlE" kind="presentation" identifier="EnterEditing" id="ICW-XW-tRI"/>
@@ -312,17 +327,23 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="logo"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I7b-IZ-8IK" userLabel="Calendar">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I7b-IZ-8IK" userLabel="Calendar">
                                 <rect key="frame" x="353" y="45" width="38" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="calendar"/>
                             </button>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="page1_tab" translatesAutoresizingMaskIntoConstraints="NO" id="OGI-4O-n6K">
+                                <rect key="frame" x="-189" y="778" width="793" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="P0w-mf-XnK"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Write" selectedImage="icon" id="exp-ZJ-etn"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab_icon" id="exp-ZJ-etn">
+                        <color key="badgeColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBarItem>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="datePickerTFDummy" destination="vcH-Ch-XhL" id="8ql-v9-BDv"/>
                         <outlet property="dayTFDummy" destination="v8w-Sc-z8K" id="v3Q-wm-jCM"/>
@@ -344,10 +365,13 @@
         <scene sceneID="hFi-DI-nAD">
             <objects>
                 <tabBarController id="Ozg-2e-ybL" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ADV-j9-Hhi">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backgroundImage="transparent-background" id="ADV-j9-Hhi">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="DCf-mt-9QA" kind="relationship" relationship="viewControllers" id="MxQ-Pc-oEN"/>
@@ -562,17 +586,21 @@
         <image name="background" width="125.33333587646484" height="271"/>
         <image name="calendar" width="35.333332061767578" height="35.666667938232422"/>
         <image name="font_nov" width="68" height="22.333333969116211"/>
-        <image name="icon" width="16" height="16"/>
         <image name="logo" width="155.66667175292969" height="51.666667938232422"/>
         <image name="page1" width="187.33332824707031" height="279.66665649414062"/>
+        <image name="page1_tab" width="192" height="27.666666030883789"/>
         <image name="page2_2" width="353.66665649414062" height="238.66667175292969"/>
         <image name="page2_2_x" width="21" height="21"/>
         <image name="page2_2trash-1" width="14" height="20.333333969116211"/>
         <image name="page2_left-1" width="13.333333015441895" height="20"/>
         <image name="page2_line2" width="118" height="1.3333333730697632"/>
         <image name="page2_right2" width="14.333333015441895" height="20"/>
+        <image name="page2_tab" width="190" height="30.333333969116211"/>
         <image name="page2_table1" width="354.33334350585938" height="110"/>
         <image name="sticker1" width="96" height="22.333333969116211"/>
         <image name="sticker2_1" width="13.666666984558105" height="13"/>
+        <image name="tab_icon" width="35" height="40"/>
+        <image name="tab_icon2" width="39.333332061767578" height="32.666667938232422"/>
+        <image name="transparent-background" width="500" height="500"/>
     </resources>
 </document>
